--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>My LoopLAB</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<title>LoopLAB</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/css/all.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
